hphp/test/zend/bad/ext/spl/tests/pqueue_compare_error.php
<?php
$h = new SplPriorityQueue();
$h->compare();
$h->compare(1);
$h->compare(1, 2, 3);
?>